# turbocharger

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  migrations.toml  package.json  turbocharger.code-workspace
.github/workflows/: ci.yml  publish.yml
example/: Cargo.toml
example-full/: .gitignore  Cargo.toml  README.md  package.json  snowpack.config.mjs  tailwind.config.js
example-full/frontend/: package.json  postcss.config.js  snowpack.config.mjs  tailwind.config.js
example-full/frontend/src/: App.svelte  AppLoader.svelte  index.js
example-full/src/: main.rs
example-full/src-frontend/: App.svelte  index.html
example-minimal/: Cargo.toml  README.md
example-minimal/frontend/: .gitignore  package-lock.json  package.json  snowpack.config.mjs
example-minimal/frontend/src/: index.js
example-minimal/src/: lib.rs  main ideal.rs  main.rs
example-turbosql/: Cargo.toml
example-turbosql/frontend/: snowpack.config.mjs
example-turbosql/frontend/src/: index.html  index.js
example-turbosql/src/: main.rs
example/src/: main.rs
guide/: book.toml
guide/src/: README.md  SUMMARY.md  usage.md
turbocharger/: Cargo.toml
turbocharger-impl/: Cargo.toml
turbocharger-impl/src/: automod.rs  extract.rs  extract_result.rs  extract_stream.rs  lib.rs
turbocharger-tests/: .gitignore  Cargo.toml  Dioxus.toml  package.json  web-test-runner.config.js
turbocharger-tests/src/: app.rs  main.rs  server.rs  wasm.rs
turbocharger-tests/src-frontend/: index.html  index.js
turbocharger-tests/src-frontend/tests/: turbocharger.test.js
turbocharger/src/: axum_server.rs  backend.rs  dioxus.rs  lib.rs
turbocharger/src/axum_server/: mod.rs  tls.rs
