[workspace]
members = [
  "example-full",
  "example-minimal",
  "example-turbosql",
  "turbocharger",
  "turbocharger-impl",
]

[patch.crates-io]
js-sys = {git = "https://github.com/rustwasm/wasm-bindgen"}
wasm-bindgen = {git = "https://github.com/rustwasm/wasm-bindgen"}
wasm-bindgen-futures = {git = "https://github.com/rustwasm/wasm-bindgen"}
web-sys = {git = "https://github.com/rustwasm/wasm-bindgen"}
