[workspace]
members = [
  "turbocharger",
  "turbocharger-impl",
  "turbocharger-template",
]

[patch.crates-io]
turbocharger = {path = './turbocharger'}
turbosql = {git = "https://github.com/trevyn/turbosql", branch = "main"}

[patch.'https://github.com/trevyn/turbocharger']
turbocharger = {path = './turbocharger'}
