[package]
authors = ["trevyn <trevyn-git@protonmail.com>"]
description = "Turbocharger minimal example."
edition = "2018"
name = "example-minimal"
publish = false
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# dependencies for both server and WASM module
turbocharger = {path = "../turbocharger", version = "0.1"}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# dependencies for server only
tokio = {version = "1", features = ["full"]}
warp = "0.3"
