[package]
authors = ["The authors"]
description = "Internal implementation details for Turbocharger."
edition = "2021"
license = "MIT OR Apache-2.0 OR CC0-1.0"
name = "turbocharger-impl"
repository = "https://github.com/trevyn/turbocharger"
rust-version = "1.56"
version = "0.2.0"

[lib]
proc-macro = true

[dependencies]
fs2 = "0.4"
prettyplease = "0.1"
proc-macro-error = "1"
proc-macro2 = "1"
quote = "1"
syn = {version = "1", features = ["extra-traits", "full"]}

[dev-dependencies]
todo-or-die = {version = "0.1", features = ["crate"]}

[features]
full = ["svelte"]
svelte = []
