[package]
description = "Internal implementation details for Turbocharger."
edition = "2021"
license = "MIT OR Apache-2.0 OR CC0-1.0"
name = "turbocharger-impl"
repository = "https://github.com/trevyn/turbocharger"
rust-version = "1.65"
version = "0.4.0"

[lib]
proc-macro = true

[dependencies]
fs2 = "0.4"
prettyplease = "0.1"
proc-macro-error = "1"
proc-macro2 = "1"
quote = "1"
syn = {version = "1", features = ["extra-traits", "full"]}

[features]
full = ["svelte"]
svelte = []
