[package]
edition = "2021"
name = "turbocharger-tests"
publish = false
version = "0.1.0"

[[bin]]
name = "1wasm" # dioxus-cli builds alphabetic first bin target
path = "src/wasm.rs" 

[[bin]]
name = "server"
path = "src/server.rs"

[features]
wasm = [
  "turbocharger/wasm",
  "turbocharger/full",
]
[dependencies]
# dependencies that are really only for wasm, but rust-analyzer uses too
dioxus = "0.3"

# dependencies for both server and wasm
turbocharger = {path = "../turbocharger", default-features = false, features = ["dioxus", "axum"]}
turbosql = "0.8"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# dependencies for server only
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
